Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18301

openstreetmap: Night mode shows white map area

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 4.7.3
    • Examples and Demos
    • Tag: RelTestRound3
      N8 pr1.1
    • f51cebf6b67385241c0fd08755dc59f7220742fa

    Description

      Night mode on Open street map shows white screen.

      To reproduce:
      1. Start fluidlauncher
      2. Start Open street map in fluidlauncher and wait untill map is loaded
      3. From Options menu select Night Mode

      Expected: Night mode map is shown
      Actual: Map area is white

      More details in private JIRA: https://qtrequirements.troll.no/browse/QT-4751

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jukukkon Juha Kukkonen
            hildesar Sari Hildén (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes