Fix lightmaps demo: Night mode shows white map area on Symbian

Lightmaps demo uses difference composition mode which is not
supported by default graphics engine on Symbian.

Changed lightmaps demo to use raster engine.

Task-number: QTBUG-18301
Task-number: QT-4751
Reviewed-by: Juha Kukkonen